Archive and rebaseline to current prod before next phase